// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test creation of an inny type Switch 1`] = `
<Wrapper
  backgroundColor={null}
  borderColor={null}
  bottom={null}
  className={null}
  color={null}
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  id={null}
  initialToggle={true}
  innyScale={0.6}
  left={null}
  location="none"
  minHeight={null}
  minWidth={null}
  noedit={false}
  nohover={false}
  notheme={false}
  notooltip={false}
  obj="Switch"
  onClick={[Function]}
  onError={[Function]}
  outyScale={1.25}
  padding={null}
  reset={false}
  ripple={false}
  selected={false}
  sizing="normal"
  sliderScale={1.25}
  style={Object {}}
  switchType={0}
  testing={true}
  theme={null}
  tooltip={null}
  top={null}
  visible={true}
  width={null}
  xcss={null}
>
  <Switch__SliderContainerView
    className="ui-switch"
    height="20px"
    style={Object {}}
  >
    <Switch__SliderView
      backgroundColor={null}
      borderColor={null}
      bottom={null}
      className="ui-switch-slider ui-slider-on"
      color={null}
      contentEditable={false}
      controlled={true}
      direction="right"
      disabled={false}
      err={null}
      errorMessage={null}
      focus={false}
      height={null}
      id={null}
      initialToggle={true}
      innyScale={0.6}
      left={null}
      location="none"
      minHeight={null}
      minWidth={null}
      noedit={false}
      nohover={false}
      notheme={false}
      notooltip={false}
      obj="Switch"
      onClick={[Function]}
      outyScale={1.25}
      padding={null}
      ripple={false}
      selected={false}
      sizing="normal"
      sliderScale={1.25}
      style={
        Object {
          "backgroundColor": "#5cb85c",
        }
      }
      switchType={0}
      testing={true}
      theme={null}
      tooltip={null}
      top={null}
      visible={true}
      width={null}
      xcss={null}
    >
      <Switch__StyledButton
        className="ui-switch-button"
        height="9.6px"
        onClick={[Function]}
        style={
          Object {
            "left": "5%",
          }
        }
        width="9.6px"
      />
    </Switch__SliderView>
  </Switch__SliderContainerView>
</Wrapper>
`;

exports[`Test creation of an outy type Switch 1`] = `
<Wrapper
  backgroundColor={null}
  borderColor={null}
  bottom={null}
  className={null}
  color={null}
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  id={null}
  initialToggle={true}
  innyScale={0.6}
  left={null}
  location="none"
  minHeight={null}
  minWidth={null}
  noedit={false}
  nohover={false}
  notheme={false}
  notooltip={false}
  obj="Switch"
  onClick={[Function]}
  onError={[Function]}
  outyScale={1.25}
  padding={null}
  reset={false}
  ripple={false}
  selected={false}
  sizing="normal"
  sliderScale={1.25}
  style={Object {}}
  switchType={1}
  testing={true}
  theme={null}
  tooltip={null}
  top={null}
  visible={true}
  width={null}
  xcss={null}
>
  <Switch__SliderContainerView
    className="ui-switch"
    height="20px"
    style={Object {}}
  >
    <Switch__SliderView
      backgroundColor={null}
      borderColor={null}
      bottom={null}
      className="ui-switch-slider ui-slider-on"
      color={null}
      contentEditable={false}
      controlled={true}
      direction="right"
      disabled={false}
      err={null}
      errorMessage={null}
      focus={false}
      height={null}
      id={null}
      initialToggle={true}
      innyScale={0.6}
      left={null}
      location="none"
      minHeight={null}
      minWidth={null}
      noedit={false}
      nohover={false}
      notheme={false}
      notooltip={false}
      obj="Switch"
      onClick={[Function]}
      outyScale={1.25}
      padding={null}
      ripple={false}
      selected={false}
      sizing="normal"
      sliderScale={1.25}
      style={
        Object {
          "backgroundColor": "#5cb85c",
        }
      }
      switchType={1}
      testing={true}
      theme={null}
      tooltip={null}
      top={null}
      visible={true}
      width={null}
      xcss={null}
    >
      <Switch__StyledButton
        className="ui-switch-button"
        height="20px"
        onClick={[Function]}
        style={
          Object {
            "left": "-15%",
          }
        }
        width="20px"
      />
    </Switch__SliderView>
  </Switch__SliderContainerView>
</Wrapper>
`;

exports[`Test disabling of the Switch control 1`] = `
<Switch
  backgroundColor={null}
  borderColor={null}
  bottom={null}
  className={null}
  color={null}
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={true}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  id={null}
  initialToggle={false}
  innyScale={0.6}
  left={null}
  location="none"
  minHeight={null}
  minWidth={null}
  noedit={false}
  nohover={false}
  notheme={false}
  notooltip={false}
  obj="Switch"
  onClick={[Function]}
  outyScale={1.25}
  padding={null}
  ripple={false}
  selected={false}
  sizing="normal"
  sliderScale={1.25}
  style={Object {}}
  switchType={1}
  testing={true}
  theme={null}
  tooltip={null}
  top={null}
  visible={true}
  width={null}
  xcss={null}
/>
`;

exports[`Test making the Switch control invisible 1`] = `
<Switch
  backgroundColor={null}
  borderColor={null}
  bottom={null}
  className={null}
  color={null}
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  id={null}
  initialToggle={false}
  innyScale={0.6}
  left={null}
  location="none"
  minHeight={null}
  minWidth={null}
  noedit={false}
  nohover={false}
  notheme={false}
  notooltip={false}
  obj="Switch"
  onClick={[Function]}
  outyScale={1.25}
  padding={null}
  ripple={false}
  selected={false}
  sizing="normal"
  sliderScale={1.25}
  style={Object {}}
  switchType={1}
  testing={true}
  theme={null}
  tooltip={null}
  top={null}
  visible={false}
  width={null}
  xcss={null}
/>
`;

exports[`Test retrieval of the Switch props object 1`] = `
Object {
  "backgroundColor": null,
  "borderColor": null,
  "bottom": null,
  "children": null,
  "className": null,
  "color": null,
  "contentEditable": false,
  "controlled": true,
  "direction": "right",
  "disabled": false,
  "err": null,
  "errorMessage": null,
  "focus": false,
  "height": null,
  "id": null,
  "initialToggle": false,
  "innyScale": 0.6,
  "left": null,
  "location": "none",
  "minHeight": null,
  "minWidth": null,
  "noedit": false,
  "nohover": false,
  "notheme": false,
  "notooltip": false,
  "obj": "Switch",
  "onClick": [Function],
  "outyScale": 1.25,
  "padding": null,
  "ripple": false,
  "selected": false,
  "sizing": "normal",
  "sliderScale": 1.25,
  "style": Object {},
  "switchType": 1,
  "testing": true,
  "theme": null,
  "tooltip": null,
  "top": null,
  "visible": true,
  "width": null,
  "xcss": null,
}
`;

exports[`Test retrieval of the Switch props object 2`] = `
Object {
  "children": null,
  "sizing": "normal",
  "style": Object {},
  "toggle": false,
}
`;

exports[`Test the click handler on the Switch control 1`] = `
<Wrapper
  backgroundColor={null}
  borderColor={null}
  bottom={null}
  className={null}
  color={null}
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  id={null}
  initialToggle={false}
  innyScale={0.6}
  left={null}
  location="none"
  minHeight={null}
  minWidth={null}
  noedit={false}
  nohover={false}
  notheme={false}
  notooltip={false}
  obj="Switch"
  onClick={[MockFunction]}
  onError={[Function]}
  outyScale={1.25}
  padding={null}
  reset={false}
  ripple={false}
  selected={false}
  sizing="normal"
  sliderScale={1.25}
  style={Object {}}
  switchType={1}
  testing={true}
  theme={null}
  tooltip={null}
  top={null}
  visible={true}
  width={null}
  xcss={null}
>
  <Switch__SliderContainerView
    className="ui-switch"
    height="20px"
    style={Object {}}
  >
    <Switch__SliderView
      backgroundColor={null}
      borderColor={null}
      bottom={null}
      className="ui-switch-slider ui-slider-off"
      color={null}
      contentEditable={false}
      controlled={true}
      direction="right"
      disabled={false}
      err={null}
      errorMessage={null}
      focus={false}
      height={null}
      id={null}
      initialToggle={false}
      innyScale={0.6}
      left={null}
      location="none"
      minHeight={null}
      minWidth={null}
      noedit={false}
      nohover={false}
      notheme={false}
      notooltip={false}
      obj="Switch"
      onClick={[Function]}
      outyScale={1.25}
      padding={null}
      ripple={false}
      selected={false}
      sizing="normal"
      sliderScale={1.25}
      style={
        Object {
          "backgroundColor": "#d9534f",
        }
      }
      switchType={1}
      testing={true}
      theme={null}
      tooltip={null}
      top={null}
      visible={true}
      width={null}
      xcss={null}
    >
      <Switch__StyledButton
        className="ui-switch-button"
        height="20px"
        onClick={[Function]}
        style={
          Object {
            "left": "45%",
          }
        }
        width="20px"
      />
    </Switch__SliderView>
  </Switch__SliderContainerView>
</Wrapper>
`;
